# super_sdf

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: Font.fs.glsl  Font.ps.hlsl  Font.vs.glsl  Font.vs.hlsl
src/api/include/: Contour.hh  CubicDistance.hh  FileHandler.hh  FontFace.hh  FontHelpers.hh  Glyph.hh  GlyphShape.hh  LinearAlgebra.hh  LinearDistance.hh  QuadraticDistance.hh  Signal.hh
src/api/lib/: Contour.cc  CubicDistance.cc  FileHandler.cc  FontFace.cc  Glyph.cc  GlyphShape.cc  LinearAlgebra.cc  LinearDistance.cc  QuadraticDistance.cc  Signal.cc
src/app/: Main.cc  Shader.cc  Shader.hh  entry.cc
src/app/Implementation/Graphics/GL4/: GL4Context.cc  GL4Context.hh  GL4IndexBuffer.cc  GL4IndexBuffer.hh  GL4InputLayout.cc  GL4InputLayout.hh  GL4Shader.cc  GL4Shader.hh  GL4Texture.cc  GL4Texture.hh  GL4VertexBuffer.cc  GL4VertexBuffer.hh
src/app/Implementation/Window/GLFW/: GLFWWindow.cc  GLFWWindow.hh
src/app/Interface/Graphics/: Context.hh  IndexBuffer.hh  InputLayout.hh  Shader.hh  Texture.hh  VertexBuffer.hh
src/app/Interface/Window/: Window.hh
src/app/test/: logger.hh
src/app/wrappers/: Image.cc  Image.hh
